# uSDX_variant

./: .gitignore  .gitmodules  Building_avrdude_from_source.md  README.md
Hardware/: Clock generators.ods  TODO.txt
Hardware/3D_models/: 27Mhz_crystal.FCStd  27Mhz_crystal.FCStd1  27Mhz_crystal.step  27Mhz_crystal.wrl  ABLS-20.000MHZ-20-B-3-H-T.FCStd  AtMega328p.FCStd  AtMega328p.FCStd1  BPF_board.FCStd  BPF_board.FCStd1  Body.step  Body.wrl  Button.step  Button.wrl  CUI_-_SJ-43514-SMT.FCStd  CUI_-_SJ-43514-SMT.step  CUI_-_SJ-43514-SMT.wrl  Connect.step  Connect.wrl  ECS-200-20-20BM-DP.wrl  EEE-FK1C101SR.FCStd  EEE-FK1C101SR.wrl  Fusion.step  Fusion.wrl  MSS6122-104MLC.FCStd  MSS6122-104MLC.FCStd1  MSS6122-104MLC.step  MSS6122-104MLC.wrl  PEC11R-4220F-S0024.stp  PEC11R-4220F-S0024.wrl  QFP32.step  QFP32.wrl  RASM722BKZ.FCStd  RASM722BKZ.FCStd1  SMA_conn.step  SMA_conn.wrl  SMA_connector.FCStd  SMA_connector.FCStd1  STX-3150-3C-1.FCStd  STX-3150-3C-1.FCStd1  STX-3150-3C-1.step  (+27 more)
Hardware/3D_models/SamacSys_3D_Models/: 1613_14.step  1613_14.wrl  16PJ200.step  16PJ200.wrl  1N4007F.step  1N4007F.wrl  1N4148W_R2_00001.step  1N4148W_R2_00001.wrl  830108207209.step  830108207209.wrl  ATMEGA16A-AU.step  ATMEGA16A-AU.wrl  ATMEGA328P-ANR.step  ATMEGA328P-ANR.wrl  AZ1117CH-5.0TRG1DITR-ND.step  AZ1117CH-5.0TRG1DITR-ND.wrl  ECS-200-20-20BM-DP.step  FST3253MTCX.step  FST3253MTCX.wrl  LM1117MPX-25NOPB.step  LM1117MPX-50NOPB.step  LM1117MPX-50NOPB.wrl  MC74AC00DR2G.step  MC74AC00DR2G.wrl  PTS125SM122LFS.step  PTS125SM122LFS.wrl  RC1602B-BIW-ESX.step  RC1602B-BIW-ESX.wrl  SI5351A-B-GTR.wrl  UCQ1C100MCL1GB.step  UCQ1C100MCL1GB.wrl
Hardware/Footprints/SamacSys.pretty/: 830108207209.kicad_mod  CAPAE430X470N.kicad_mod  CONSMA002SMDGT.kicad_mod  ECS2002020BMDP.kicad_mod  EEE0GA101SR.kicad_mod  RC1602BBIWESX.kicad_mod  SJ43514SMTTR.kicad_mod  SODFL4626X110N.kicad_mod  SOIC127P600X175-14N.kicad_mod  SOP50P490X110-10N.kicad_mod  STX31503C1.kicad_mod
Hardware/Footprints/library.pretty/: L_Toroid_Vertical_L10.0mm_W5.0mm_P5.08mm.kicad_mod
Hardware/Footprints/user_footprints.pretty/: 16PJ200.kicad_mod  830108207209.kicad_mod  ABLS-20.000MHZ-20-B-3-H-T.kicad_mod  BNC_1-1634613-0.kicad_mod  BPF_board.kicad_mod  CAPAE430X470N.kicad_mod  CONSMA002SMDGT.kicad_mod  C_0805_2012Metric.kicad_mod  C_Disc_D3.0mm_W1.6mm_P2.50mm.kicad_mod  ECS2002020BMDP.kicad_mod  EEE0GA101SR.kicad_mod  L_Toroid_Vertical_L10.0mm_W5.0mm_P5.08mm.kicad_mod  TO-92.kicad_mod  (+25 more)
Hardware/Symbols/: uSDX_BPF.kicad_sym  uSDX_SMD.kicad_sym
Hardware/uSDX_BPF/: fp-info-cache  sym-lib-table  uSDX_BPF-cache.lib  uSDX_BPF.kicad_pcb  uSDX_BPF.kicad_prl  uSDX_BPF.kicad_pro  uSDX_BPF.kicad_sch  uSDX_BPF.net  uSDX_BPF.pro  uSDX_BPF.sch-bak
Hardware/uSDX_SMD/: #auto_saved_files#  fp-info-cache  sym-lib-table  uSDX_SMD.kicad_pcb  uSDX_SMD.kicad_pcb-bak  uSDX_SMD.kicad_prl  uSDX_SMD.kicad_pro  uSDX_SMD.kicad_sch  uSDX_SMD.net
Hardware/uSDX_Transceiver_SMD/: Gerbers.7z  fp-info-cache  fp-lib-table  sym-lib-table  uSDX_SMD.kicad_prl  uSDX_Transceiver_SMD-cache.lib  uSDX_Transceiver_SMD-rescue.lib  uSDX_Transceiver_SMD.kicad_pcb  uSDX_Transceiver_SMD.kicad_prl  uSDX_Transceiver_SMD.kicad_pro  uSDX_Transceiver_SMD.kicad_sch  uSDX_Transceiver_SMD.kicad_sch-bak  uSDX_Transceiver_SMD.pro  uSDX_Transceiver_SMD.sch  uSDX_Transceiver_SMD.sch-bak  user.lib
Hardware/uSDX_V1_01-KICAD-files/: SDR_SSB  SDR_SSB-cache.lib  SDR_SSB-rescue.lib  SDR_SSB.csv  SDR_SSB.html  SDR_SSB.kicad_pcb  SDR_SSB.kicad_pcb-bak  SDR_SSB.net  SDR_SSB.ods  SDR_SSB.pro  SDR_SSB.sch  SDR_SSB.sch-bak  SDR_SSB.sch.1.bak  SDR_SSB.xml  SDR_SSB_v2.net  clock_generator.sch  control_logic.sch  encoder.sch  fp-info-cache  inout_stage.sch-bak  my_design.xlsx  post_detector.sch-bak  power_supply.sch-bak  report.txt  sym-lib-table  tayloe_mixer.sch
Software/: CMakeLists.txt  buildtests.sh  cleantests.sh  platform.h  run_tests.sh  runtests.sh  target_build.sh  todo.txt
Software/Application/: uSDX_V1_02i_27mhz.ino  uSDX_transceiver.cpp
Software/libraries/Drivers/LCD/: LCD_Driver.cpp  LCD_driver.h
Software/libraries/Encoder/: Encoder.cpp
Software/src/: CMakeLists.txt  platform.h
Software/src/Application/: uSDX_transceiver.cpp
Software/src/libraries/Drivers/Encoder/: Encoder.h
Software/src/libraries/Drivers/LCD/: LCD_Driver.cpp  LCD_driver.h
Software/tests/: CMakeLists.txt
Software/tests/Mock/overwritten/util/: delay.h
Software/tests/Mock/util/: delay_mocked.cpp  delay_mocked.h
Software/tests/UTs/Drivers/: LCD_Driver_UT.cpp
Software/tests/overwritten/avr/: io.cpp  io.h
Software/tests/overwritten/util/: delay.h
Software/uSDX_V1.02i-hotfix-applied-firmwares-for-WB2CBA-PCB-V1.01-and-V1.02/uSDX_V1_02i_25mhz/: I2C.cpp  I2C.hpp  LCD.cpp  LCD.hpp  uSDX_V1_02i_25mhz.cpp  uSDX_V1_02i_25mhz.ino
Software/uSDX_V1.02i-hotfix-applied-firmwares-for-WB2CBA-PCB-V1.01-and-V1.02/uSDX_V1_02i_27mhz/: uSDX_V1_02i_27mhz.ino
Software/uSDX_v1.1/Application/: uSDX_V1_02i_27mhz.ino
Software/uSDX_v1.1/libraries/Drivers/LCD/: LCD_driver.h
Tools/: avrdude-6.4.tar.gz.sig
(+63 files in other folders)
